# crypto-miner-optimizer

./: .gitignore  LICENSE  README.md  SECURITY.md  build-release.bat  index.html  package-lock.json  package.json  vite.config.js
docs/images/: .gitkeep
installer/: CryptoMinerOptimizer.iss
qt/: CMakeLists.txt  README.md
qt/src/: main.cpp
qt/web/: index.html
qt/web/assets/: index-DaEK1N4k.js  index-UbhTreGD.css
src/: Layout.jsx  pages.config.js
src/api/: offlineClient.js
src/components/ai/: AIModelStats.jsx  AITrainingProgress.jsx  DataDistribution.jsx  FeatureImportanceChart.jsx  ModelArchitecture.jsx  ModelPerformanceChart.jsx  ModelVersionComparison.jsx  PredictionSimulator.jsx  TrainingDataTable.jsx
src/components/automation/: AutomationRuleManager.jsx  GPURemoteControl.jsx  HardwareAlerts.jsx
src/components/charts/: EfficiencyChart.jsx
src/components/coinswitch/: AutoSwitchConfig.jsx  PredictionAccuracyChart.jsx  PredictiveCoinSwitch.jsx
src/components/dashboard/: BenchmarkModal.jsx  CriticalAlertsPanel.jsx  GPUCard.jsx  GPUHistoricalCharts.jsx  LogsViewer.jsx  OptimizationPanel.jsx  StatsOverview.jsx
src/components/health/: AIFailurePrediction.jsx  GPUHealthMonitor.jsx  HealthHistoryLog.jsx  PredictiveAlertConfig.jsx
src/components/help/: HelpTooltip.jsx
src/components/onboarding/: OnboardingTour.jsx
src/lib/: AuthContext.jsx  NavigationTracker.jsx  PageNotFound.jsx  app-params.js
src/pages/: AIModel.jsx  Automation.jsx  Benchmarks.jsx  CoinSwitch.jsx  Dashboard.jsx  Guides.jsx  Profiles.jsx
(+10 files in other folders)
